--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ install:
   - pipenv sync --dev
 script:
   - pipenv run flake8 .
-  - pipenv run pytest
+  - pipenv run pytest --cov=pypro
+after_success:
+  - pipenv run codecov
