--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ python-decouple = "*"
 dj-database-url = "*"
 django-s3-folder-storage = "*"
 psycopg2 = "*"
+collectfast = "*"
 
 [requires]
 python_version = "3.8"
