--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
 script:
   - pipenv run flake8 .
   - pipenv run pytest --cov=pypro
-after_success:
-  - pipenv run codecov
+# after_success:
+#   - pipenv run codecov
